	chio and HPUX are implemented.
	-Eric Schnoebelen <eric@cirr.com>

	Numerous bugs/errors were fixed in chg-chio/chg-scsi.  it now
	properly responds to -eject requests, among other things.
	-Eric Schnoebelen <eric@cirr.com>

	use vdump to dump advfs filesystems only.
	-Martyn Johnson <Martyn.Johnson@cl.cam.ac.uk> & oliva

Version 2.4.0

	fix sendbackup-gnutar crashing problem.  -oliva

	ensure that, in case of tape failure when dumping to tape, no
	incremental relative to the failed backup is performed.
	-oliva & Liudvikas Bukys <bukys@cs.rochester.edu>

	Fix buffer use and write() error handling in the index pipeline.
	-Dietmar Goldbeck <dietmar@telemedia.de>
	& Lars Fenneberg <lf@elemental.net>

	new index generation commands.  -oliva

Version 2.4.0b6p3

	accept curses and ncurses in addition to termcap for readline
	support, just as readline itself does.  -oliva

	fix NO-ROOM handling when Kerberos encryption is enabled.
	-oliva & Eric Siegerman <erics@now.com>

	patch file for automake 1.2d provided. -oliva

	sendbackup.debug now contains the argument list of child
	processes. -oliva

	wait() for child processes, such as server compressor, before
	accepting other commands.
	-Liudvikas Bukys <bukys@cs.rochester.edu>

	amrecover will print an error message if it is not run by root.
	It will not crash if you `pwd' before selecting a disk.  -oliva

	updated to libtool 1.0i. -oliva

	fixed tape block size of vxdump on HPUX 10.20.
	-Andrew Ivanov <ivanov@mics.msu.su>

	Use "a" mode instead of "w" for the fdopen of the debug file.
	-David Lamkin <drl@net-tel.co.uk>

	allow multiple concurrent gnutar backups, by fixing amandates
	locking mechanism.
	-Liudvikas Bukys <bukys@cs.rochester.edu>

	amdump should check for a hold file, as says the man-page.
	-oliva

	fix automatic enabling of USE_RUNDUMP for systems that require
	this.  xfsdump support no longer requires USE_RUNDUMP to be
	defined, rundump will be enabled and used for xfs filesystems